feat: process instance handle implementation
